--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   scoped_model: ^1.0.1
   firebase_auth: ^0.11.1+12
   url_launcher: ^5.1.1
+
+  image_picker: 0.6.7+4
+
   flutter:
     sdk: flutter
 
